TUC-45 Getting rid of uppercases.

--- a/src/TucuCli/makefile
+++ b/src/TucuCli/makefile
@@ -10,9 +10,9 @@ TYPE := APP
 
 SOURCES := tucucli.cpp 
 INCLUDES := . \
-            ../../Libs/eigen-3.3.2
+            ../../libs/eigen-3.3.2
 LIBS := TucuCore
 EXTLIBS := 
 DEFINES := 
 
-include $(TUCUXI_ROOT)/Make/Rules.mak
+include $(TUCUXI_ROOT)/make/rules.mak
