TUC-45 Getting rid of uppercases.

--- a/src/TucuCli/makefile
+++ b/src/TucuCli/makefile
@@ -10,7 +10,8 @@ TYPE := APP
 
 SOURCES := tucucli.cpp 
 INCLUDES := . \
-            ../../libs/eigen-3.3.2
+            ../../libs/eigen-3.3.2 \
+            ../../libs/spdlog-master-20170622\include
 LIBS := TucuCore
 EXTLIBS := 
 DEFINES := 
