--- a/src/TucuCli/makefile
+++ b/src/TucuCli/makefile
@@ -11,7 +11,7 @@ TYPE := APP
 SOURCES := tucucli.cpp 
 INCLUDES := . \
             ../../libs/eigen-3.3.2 \
-            ../../libs/spdlog-master-20170622\include
+            ../../libs/spdlog-master-20170622/include
 LIBS := TucuCore
 EXTLIBS := 
 DEFINES := 
