TUC-45 Getting ride of uppercases...

--- a/src/tucucli/makefile
+++ b/src/tucucli/makefile
@@ -5,14 +5,14 @@
 ##
 ## ----------------------------------------------------------------------------
 
-NAME := TucuCli
+NAME := tucucli
 TYPE := APP
 
 SOURCES := tucucli.cpp 
 INCLUDES := . \
             ../../libs/eigen-3.3.2 \
             ../../libs/spdlog-master-20170622/include
-LIBS := TucuCore
+LIBS := tucucore
 EXTLIBS := 
 DEFINES := 
 
