--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -5,7 +5,7 @@
 ##
 ## ----------------------------------------------------------------------------
 
-NAME := TucuCore
+NAME := tucucore
 TYPE := LIB
 
 SOURCES := concentrationcalculator.cpp \
