TUC-67 Added namespace + missing library in makefile

--- a/src/tucucommon/makefile
+++ b/src/tucucommon/makefile
@@ -8,8 +8,9 @@
 NAME := tucucommon
 TYPE := LIB
 
-SOURCES := componentmanager.cpp logger.cpp
-INCLUDES := .
+SOURCES := componentmanager.cpp logger.cpp loggerhelper.cpp
+INCLUDES := . \
+            ../../libs/spdlog-master-20170622/include
 
 LIBS := 
 EXTLIBS := 
