--- a/src/tucucommon/makefile
+++ b/src/tucucommon/makefile
@@ -8,9 +8,8 @@
 NAME := tucucommon
 TYPE := LIB
 
-SOURCES := componentmanager.cpp logger.cpp loggerhelper.cpp
-INCLUDES := . \
-            ../../libs/spdlog-master-20170622/include
+SOURCES := componentmanager.cpp logger.cpp
+INCLUDES := ../../libs/spdlog-master-20170622/include
 
 LIBS := 
 EXTLIBS := 
