--- a/test/tucucommon/makefile
+++ b/test/tucucommon/makefile
@@ -9,7 +9,8 @@ NAME := tucucommon
 TYPE := TEST
 
 SOURCES := tests.cpp
-INCLUDES := ../../libs/fructose-1.3/fructose/include
+INCLUDES := ../../libs/fructose-1.3/fructose/include \
+            ../../libs/spdlog-master-20170622/include
 
 LIBS := tucucommon
 EXTLIBS := 
