--- a/src/tucucli/makefile
+++ b/src/tucucli/makefile
@@ -12,7 +12,7 @@ SOURCES := tucucli.cpp
 INCLUDES := . \
             ../../libs/eigen-3.3.2 \
             ../../libs/spdlog-master-20170622/include
-LIBS := tucucore
+LIBS := tucucore tucucommon
 EXTLIBS := 
 DEFINES := 
 
