TUC-45 Fixed makefiles to support compilation of external libraries.

--- a/src/tucucli/makefile
+++ b/src/tucucli/makefile
@@ -12,7 +12,7 @@ SOURCES := tucucli.cpp
 INCLUDES := . \
             ../../libs/eigen-3.3.2 \
             ../../libs/spdlog-master-20170622/include
-LIBS := tucucore tucucommon
+LIBS := tucucommon tucucore
 EXTLIBS := 
 DEFINES := 
 
