TUC-80 Fixed in which library the tinyjs code is embedded.

--- a/src/tucucommon/makefile
+++ b/src/tucucommon/makefile
@@ -15,7 +15,7 @@ SOURCES := componentmanager.cpp \
 INCLUDES := ../../libs/spdlog-master-20170622/include \
             ../../libs/tiny-js-master-20170629
 
-LIBS := 
+LIBS := tinyjs
 EXTLIBS := 
 DEFINES := 
 
