--- a/test/tucucommon/makefile
+++ b/test/tucucommon/makefile
@@ -12,7 +12,7 @@ SOURCES := tests.cpp
 INCLUDES := ../../libs/fructose-1.3/fructose/include \
             ../../libs/spdlog-master-20170622/include
 
-LIBS := tinyjs tucucommon
+LIBS := tucucommon
 EXTLIBS := 
 DEFINES := 
 
