TUC-86 Introduced date and time management classes.

--- a/src/tucucommon/makefile
+++ b/src/tucucommon/makefile
@@ -11,9 +11,13 @@ TYPE := LIB
 SOURCES := componentmanager.cpp \
            logger.cpp \
            utils.cpp \
-           jsengine.cpp
+           jsengine.cpp \
+           duration.cpp \
+           timeofday.cpp \
+           datetime.cpp
 INCLUDES := ../../libs/spdlog-master-20170622/include \
-            ../../libs/tiny-js-master-20170629
+            ../../libs/tiny-js-master-20170629 \
+            ../../libs/date-master-20170711
 
 LIBS := tinyjs
 EXTLIBS := 
