--- a/test/tucucommon/makefile
+++ b/test/tucucommon/makefile
@@ -10,7 +10,8 @@ TYPE := TEST
 
 SOURCES := tests.cpp
 INCLUDES := ../../libs/fructose-1.3/fructose/include \
-            ../../libs/spdlog-master-20170622/include
+            ../../libs/spdlog-master-20170622/include \
+            ../../libs/date-master-20170711          
 
 LIBS := tucucommon
 EXTLIBS := 
