--- a/test/tucucommon/makefile
+++ b/test/tucucommon/makefile
@@ -11,7 +11,8 @@ TYPE := TEST
 SOURCES := tests.cpp
 INCLUDES := ../../libs/fructose-1.3/fructose/include \
             ../../libs/spdlog-master-20170622/include \
-            ../../libs/date-master-20170711          
+            ../../libs/date-master-20170711 \
+            ../../libs/rapidxml-1.13
 
 LIBS := tucucommon
 EXTLIBS := 
