TUC-86 Adaptation of TucuCore to use the new date and time classes.

--- a/src/tucucli/makefile
+++ b/src/tucucli/makefile
@@ -11,7 +11,8 @@ TYPE := APP
 SOURCES := tucucli.cpp 
 INCLUDES := . \
             ../../libs/eigen-3.3.2 \
-            ../../libs/spdlog-master-20170622/include
+            ../../libs/spdlog-master-20170622/include \
+            ../../libs/date-master-20170711
 LIBS := tucucommon tucucore
 EXTLIBS := 
 DEFINES := 
