--- a/test/tucucore/makefile
+++ b/test/tucucore/makefile
@@ -12,8 +12,9 @@ SOURCES := tests.cpp
 INCLUDES := ../../libs/fructose-1.3/fructose/include \
             ../../libs/spdlog-master-20170622/include \
             ../../libs/eigen-3.3.2 \
-            ../../libs/boost-1.63.0
-
+            ../../libs/boost-1.63.0 \
+            ../../libs/date-master-20170711
+            
 LIBS := tucucommon tucucore
 EXTLIBS := 
 DEFINES := 
