TUC-71 add crypto helper class to use sha and aes functions

--- a/src/tucucommon/makefile
+++ b/src/tucucommon/makefile
@@ -24,8 +24,8 @@ SOURCES := componentmanager.cpp \
 INCLUDES := ../../libs/spdlog-master-20170622/include \
             ../../libs/tiny-js-master-20170629 \
             ../../libs/date-master-20170711 \
-            ../../libs/rapidxml-1.13
-
+            ../../libs/rapidxml-1.13 \
+            ../../libs/botan-2.1.0/build/include
 LIBS := tinyjs botan
 EXTLIBS := 
 DEFINES := 
