--- a/test/tucucommon/makefile
+++ b/test/tucucommon/makefile
@@ -12,7 +12,8 @@ SOURCES := tests.cpp
 INCLUDES := ../../libs/fructose-1.3/fructose/include \
             ../../libs/spdlog-master-20170622/include \
             ../../libs/date-master-20170711 \
-            ../../libs/rapidxml-1.13
+            ../../libs/rapidxml-1.13 \
+            ../../libs/botan-2.1.0/build/include
 
 LIBS := tucucommon
 EXTLIBS := 
