TUC-57 two compartment bolus is added

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -14,6 +14,7 @@ SOURCES := concentrationcalculator.cpp \
            onecompartmentbolus.cpp \
            onecompartmentextra.cpp \
            onecompartmentintra.cpp \
+           twocompartmentbolus.cpp \
            intakeextractor.cpp \
            dosage.cpp
 INCLUDES := . \
