--- a/libs/botan-2.1.0/makefile
+++ b/libs/botan-2.1.0/makefile
@@ -27,12 +27,12 @@ DEFINES :=
 include $(TUCUXI_ROOT)/make/rules.mak
 
 prebuild: 
-	if exist build $(RMDIR) build
-	if exist objs $(RMDIR) objs
+	$(IFEXIST) build $(THEN) $(RMDIR) build $(ENDIF)
+	$(IFEXIST) objs $(THEN) $(RMDIR) objs $(ENDIF)
 	$(MKDIR) build
 	$(MKDIR) objs
 	$(COPY) makefile makefile.tmp
-	python configure.py --disable-shared
+	$(PYTHON) configure.py --disable-shared
 	$(DEL) Makefile
 	$(COPY) makefile.tmp makefile
 	$(DEL) makefile.tmp
