TUC-58 3 compartments with bolus algorithm is added. Files of intra and extra are created.

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -17,6 +17,9 @@ SOURCES := concentrationcalculator.cpp \
            twocompartmentbolus.cpp \
            twocompartmentextra.cpp \
            twocompartmentintra.cpp \
+           threecompartmentbolus.cpp \
+           threecompartmentextra.cpp \
+           threecompartmentintra.cpp \
            intakeextractor.cpp \
            dosage.cpp
 INCLUDES := . \
