--- a/src/tucucommon/makefile
+++ b/src/tucucommon/makefile
@@ -26,7 +26,7 @@ INCLUDES := ../../libs/spdlog-master-20170622/include \
             ../../libs/date-master-20170711 \
             ../../libs/rapidxml-1.13 \
             ../../libs/botan-2.1.0/build/include
-LIBS := tinyjs botan
+LIBS := tinyjs
 EXTLIBS := 
 DEFINES := 
 
