TUC-69 Fixed compilation of Tucucli

--- a/src/tucucli/makefile
+++ b/src/tucucli/makefile
@@ -13,7 +13,7 @@ INCLUDES := . \
             ../../libs/eigen-3.3.2 \
             ../../libs/spdlog-master-20170622/include \
             ../../libs/date-master-20170711
-LIBS := tucucommon tucucore
+LIBS := tucucommon tucucore botan
 EXTLIBS := 
 DEFINES := 
 
