TUC-59 Fixed missing include for the compilation of Tucucore.

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -25,7 +25,8 @@ SOURCES := concentrationcalculator.cpp \
 INCLUDES := . \
             ../../libs/eigen-3.3.2 \
             ../../libs/boost-1.63.0 \
-            ../../libs/date-master-20170711
+            ../../libs/date-master-20170711 \
+            ../../libs/spdlog-master-20170622/include
 LIBS := 
 EXTLIBS := 
 DEFINES := 
