TUC-88 Added file operation.cpp to Tucucore's makefile.

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -21,7 +21,8 @@ SOURCES := concentrationcalculator.cpp \
            threecompartmentextra.cpp \
            threecompartmentintra.cpp \
            intakeextractor.cpp \
-           dosage.cpp
+           dosage.cpp \
+           operation.cpp
 INCLUDES := . \
             ../../libs/eigen-3.3.2 \
             ../../libs/boost-1.63.0 \
