TUC-45 Now makefiles in tucucore and tucucommon list the .cpp in alphabetical order.

--- a/src/tucucommon/makefile
+++ b/src/tucucommon/makefile
@@ -8,26 +8,28 @@
 NAME := tucucommon
 TYPE := LIB
 
+# Let's keep it in alphabetical order
 SOURCES := componentmanager.cpp \
+           cryptohelper.cpp \
+		   datetime.cpp \
+		   duration.cpp \
+		   jsengine.cpp \
+		   licensemanager.cpp \
            logger.cpp \
+		   systeminfo.cpp \
+		   timeofday.cpp \
            utils.cpp \
-           jsengine.cpp \
-           duration.cpp \
-           timeofday.cpp \
-           datetime.cpp \
+		   xmlattribute.cpp \
            xmldocument.cpp \
-           xmlnode.cpp \
-           xmlattribute.cpp \
-           systeminfo.cpp \
-           licensemanager.cpp \
-           cryptohelper.cpp
+           xmlnode.cpp
+
 INCLUDES := ../../libs/spdlog-master-20170622/include \
             ../../libs/tiny-js-master-20170629 \
             ../../libs/date-master-20170711 \
             ../../libs/rapidxml-1.13 \
             ../../libs/botan-2.1.0/build/include
 LIBS := tinyjs
-EXTLIBS := 
-DEFINES := 
+EXTLIBS :=
+DEFINES :=
 
 include $(TUCUXI_ROOT)/make/rules.mak
