--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -8,36 +8,40 @@
 NAME := tucucore
 TYPE := LIB
 
-SOURCES := concentrationcalculator.cpp \
+# Let's keep it in alphabetical order
+SOURCES := cachedlogarithms.cpp \
+		   concentrationcalculator.cpp \
+		   corecomponent.cpp \
+           covariateextractor.cpp \
+           dosage.cpp \
+		   drugmodel.cpp \
+           drugtreatment.cpp \
+           intakeextractor.cpp \
            intakeintervalcalculator.cpp \
-           cachedlogarithms.cpp \
-           onecompartmentbolus.cpp \
+		   intaketocalculatorassociator.cpp \
+		   onecompartmentbolus.cpp \
            onecompartmentextra.cpp \
            onecompartmentintra.cpp \
-           twocompartmentbolus.cpp \
-           twocompartmentextra.cpp \
-           twocompartmentintra.cpp \
-           threecompartmentbolus.cpp \
+		   operation.cpp \
+		   parameter.cpp \
+		   parametersextractor.cpp \
+		   pkmodel.cpp \
+		   sampleextractor.cpp \
+           targetextractor.cpp \
+		   threecompartmentbolus.cpp \
            threecompartmentextra.cpp \
            threecompartmentintra.cpp \
-           intakeextractor.cpp \
-           dosage.cpp \
-           operation.cpp \
-           corecomponent.cpp \
-           covariateextractor.cpp \
-           drugmodel.cpp \
-           drugtreatment.cpp \
-           parameter.cpp \
-           parametersextractor.cpp \
-           sampleextractor.cpp \
-           targetextractor.cpp
+		   twocompartmentbolus.cpp \
+           twocompartmentextra.cpp \
+           twocompartmentintra.cpp
+
 INCLUDES := . \
             ../../libs/eigen-3.3.2 \
             ../../libs/boost-1.63.0 \
             ../../libs/date-master-20170711 \
             ../../libs/spdlog-master-20170622/include
-LIBS := 
-EXTLIBS := 
-DEFINES := 
+LIBS :=
+EXTLIBS :=
+DEFINES :=
 
 include $(TUCUXI_ROOT)/make/rules.mak
