TUC-70 Created main.cpp for the TucuLicense application + minor improvements of class LicenseGenerator.

--- a/src/tuculicense/makefile
+++ b/src/tuculicense/makefile
@@ -8,7 +8,8 @@
 NAME := tuculicense
 TYPE := LIB
 
-SOURCES := licensegenerator.cpp
+SOURCES := licensegenerator.cpp \
+           main.cpp
 
 INCLUDES := ../../libs/spdlog-master-20170622/include \
             ../../libs/date-master-20170711 \
