TUC-93 Fixed minor compilation problems.

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -16,6 +16,7 @@ SOURCES := cachedlogarithms.cpp \
            dosage.cpp \
 		   drugmodel.cpp \
            drugtreatment.cpp \
+           hardcodedoperation.cpp \
            intakeextractor.cpp \
            intakeintervalcalculator.cpp \
 		   intaketocalculatorassociator.cpp \
