TUC-61 Prepared the interface of the MonteCarlo percentiles calculators

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -20,6 +20,7 @@ SOURCES := cachedlogarithms.cpp \
            intakeextractor.cpp \
            intakeintervalcalculator.cpp \
            intaketocalculatorassociator.cpp \
+		   montecarlopercentilecalculator.cpp \
            onecompartmentbolus.cpp \
            onecompartmentextra.cpp \
            onecompartmentintra.cpp \
