TUC-62 Forgot to add residualerrormodel.cpp in the tucucore makefile

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -30,6 +30,7 @@ SOURCES := aposteriorietascalculator.cpp \
            parameter.cpp \
            parametersextractor.cpp \
            pkmodel.cpp \
+		   residualerrormodel.cpp \
            sampleextractor.cpp \
            targetextractor.cpp \
            threecompartmentbolus.cpp \
