TUC-59 Renaming all the Logarithms related methods and variables to Exponentials.

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -10,7 +10,7 @@ TYPE := LIB
 
 # Let's keep it in alphabetical order
 SOURCES := aposteriorietascalculator.cpp \
-           cachedlogarithms.cpp \
+           cachedexponentials.cpp \
            concentrationcalculator.cpp \
            corecomponent.cpp \
            covariateextractor.cpp \
