TUC-98 Adding operablegraphmanager.cpp to Makefile in tucucore

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -26,6 +26,7 @@ SOURCES := aposteriorietascalculator.cpp \
            onecompartmentbolus.cpp \
            onecompartmentextra.cpp \
            onecompartmentinfusion.cpp \
+		   operablegraphmanager.cpp \
            operation.cpp \
            parameter.cpp \
            parametersextractor.cpp \
