TUC-52 Adding ValidDoses and ValidDurations classes. Also used in FormulationAndRoute for valid doses, intervals and infusion times

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -17,6 +17,8 @@ SOURCES := \
            drugmodel/formulationandroute.cpp \
            drugmodel/parameterdefinition.cpp \
            drugmodel/targetdefinition.cpp \
+		   drugmodel/validdose.cpp \
+		   drugmodel/validduration.cpp \
 		   aposteriorietascalculator.cpp \
            cachedexponentials.cpp \
            concentrationcalculator.cpp \
