TUC-53 Modifying samples and targets for drugtreatment

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -41,6 +41,7 @@ SOURCES := \
            parametersextractor.cpp \
            pkmodel.cpp \
 		   residualerrormodel.cpp \
+		   sample.cpp \
            sampleextractor.cpp \
            targetextractor.cpp \
            threecompartmentbolus.cpp \
