TUC-61 Adapted makefile.

--- a/src/tucucore/makefile
+++ b/src/tucucore/makefile
@@ -22,6 +22,10 @@ SOURCES := \
 		   drugtreatment/drugtreatment.cpp \
 		   drugtreatment/sample.cpp \
 		   drugtreatment/target.cpp \
+		   processingservice/iprocessingservice.cpp \
+		   processingservice/processingrequest.cpp \
+		   processingservice/processingresponse.cpp \
+		   processingservice/processingtrait.cpp \
 		   aposteriorietascalculator.cpp \
            cachedexponentials.cpp \
            concentrationcalculator.cpp \
