TUC-121: Fixed makefile of Tucucommon tests.

--- a/test/tucucommon/makefile
+++ b/test/tucucommon/makefile
@@ -13,6 +13,7 @@ INCLUDES := ../../libs/fructose-1.3/fructose/include \
             ../../libs/spdlog-master-20170622/include \
             ../../libs/date-master-20170711 \
             ../../libs/rapidxml-1.13 \
+            ../../libs/eigen-3.3.2 \
             ../../libs/botan-2.1.0/build/include
 
 LIBS := tucucommon botan
