--- a/make/visualstudio/tucucommon-test/TucuCommon-Test.vcxproj
+++ b/make/visualstudio/tucucommon-test/TucuCommon-Test.vcxproj
@@ -144,19 +144,21 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\..\src;..\..\libs\date-master-20170711;..\..\libs\fructose-1.3\fructose\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\src;..\..\..\libs\date-master-20170711;..\..\..\libs\eigen-3.3.2;..\..\..\libs\fructose-1.3\fructose\include;..\..\..\libs\spdlog-master-20170622\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>..\tucucommon\x64\Release\TucuCommon\TucuCommon.lib;..\..\..\bin\botan.lib;Iphlpapi.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\test\tucucommon\test_componentmanager.h" />
     <ClInclude Include="..\..\..\test\tucucommon\test_cryptohelper.h" />
     <ClInclude Include="..\..\..\test\tucucommon\test_datetime.h" />
+    <ClInclude Include="..\..\..\test\tucucommon\test_iterator.h" />
     <ClInclude Include="..\..\..\test\tucucommon\test_licensemanager.h" />
     <ClInclude Include="..\..\..\test\tucucommon\test_logger.h" />
     <ClInclude Include="..\..\..\test\tucucommon\test_scriptengine.h" />
