TUC-52 Adding a better constraints handling in DrugModelDomain

--- a/src/tucucommon/makefile
+++ b/src/tucucommon/makefile
@@ -18,6 +18,7 @@ SOURCES := componentmanager.cpp \
            logger.cpp \
            systeminfo.cpp \
            timeofday.cpp \
+					 translatablestring.cpp \
            utils.cpp \
            xmlattribute.cpp \
            xmldocument.cpp \
